syntax = "proto3";
option go_package = "setting/;setting";
package table;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

//definition for swagger support
option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "ATE setting Service";
    version: "1.0";
    contact: {
      name: "ATE setting service project";
      url: "hyperl.io";
      email: "subash@hyperl.io";
    };
  };
  schemes: HTTP;
  consumes: "application/json";
  produces: "applications/json";
  responses: {
    key: "404";
    value: {
      description: "Returned when the resource does not exist.";
      schema: {
        json_schema: {
          type: STRING;
        }
      }
    }
  }
};


service TableService {

  // Read all table
  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse) {
    option (google.api.http) = {
      get: "/all"
    };
  }

  // Create new table
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/create"
      body: "*"
    };
  }

  rpc Read(ReadRequest) returns (ReadResponse) {
    option (google.api.http) = {
      get: "/read/{id}"
    };
  }

  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/update/{setting.id}",
      body: "*"

      additional_bindings {
        patch: "/update/{setting.id}",
        body: "*"
      }
    };
  }

  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/delete/{id}"
    };
  }
}

message ResponseStatus {
  bool status = 1;
  string message = 2;
}

// table data model for sevices
message Table {
  int64 id = 1;
  string name = 2;
  string qrCode = 3;
  int64 seats = 4;
  int64 userId = 5;
  bool isOpenToReservation = 6;

  //Add provision for image upload here...
}

message UserType {
  int64 id = 1;
  string name = 2;
}

message CreateRequest {
  string api = 1;
  Table table = 2;
}

message CreateResponse {
  string api = 1;
  int64 id = 2;
  ResponseStatus error = 3;
}

message ReadAllRequest {
  string api = 1;
}

message ReadAllResponse {
  string api = 1;
  repeated Table tables = 2; // list of all categories related to current user
  ResponseStatus error = 3;
}

message ReadRequest {
  string api = 1;
  string id = 2;
}

message ReadResponse {
  string api = 1;
  Table table = 2;
  ResponseStatus error = 3;
}

message UpdateRequest {
  string api = 1;
  Table table = 2;
}

message UpdateResponse {
  string api = 1;
  int64 updated = 2; // number of entities updated successfully
  ResponseStatus error = 3;
}

message DeleteRequest {
  string api = 1;
  int64 id = 2;
}

message DeleteResponse {
  string api = 1;
  int32 deleted = 2;
  ResponseStatus error = 3;
}
